--- a/templates/core/grade_list.jade
+++ b/templates/core/grade_list.jade
@@ -12,6 +12,8 @@ block content
             Голосуйте за или против правок, если у вас есть более точная информация.
             Авторизуйтесь #[a(href="http://auth.alumni57.ru") кодом выпускника], чтобы вашей информации больше доверяли.
         a#close_info.btn.btn-primary.btn-lg(role="button") Закрыть
+        | &nbsp;
+        a.btn.btn-default.btn-lg(role="button" href="/qa") Q&A
 
     - for g, l in grades
         article
