Fix grammar and capitalization

--- a/templates/core/login.jade
+++ b/templates/core/login.jade
@@ -9,9 +9,9 @@
         form(action="{% url 'api-login' %}", method="post")
           .form-group
             p.
-              Для полноценного учета введенной вами информации, вам нужно ввести "код выпускника".
-              Подробней о кодах на #[a(href="http://auth.alumni57.ru") http://auth.alumni57.ru].
-              Анонимные правки потребуют подтверждения от других выпусников перед публикацией.
+              Чтобы вашей информации доверяли, введите код выпускника.
+              Подробней о кодах на #[a(href="http://auth.alumni57.ru") auth.alumni57.ru].
+              Анонимные правки потребуют подтверждения другими выпусниками перед публикацией.
             p#login-error.bg-danger
           - csrf_token
           .form-group
