--- a/templates/core/fieldvalue_form.jade
+++ b/templates/core/fieldvalue_form.jade
@@ -9,7 +9,7 @@ form#from-add-fact.row(action="{% url 'student-value-create' pk=object.pk %}", m
     div(style='display: inline-block; margin-left: 10px; font-size: 120%') :
   .col-sm-5.form-group
     input.suggest.form-control(name='field_value', type='text',
-                               required='required')
+                               required='required', autocomplete='off')
   .col-sm-2.form-group
     button.btn.btn-default.form-control(type='submit' disabled='disabled') Добавить факт
 
