--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -46,6 +46,7 @@
               <li><a href="/">Классы выпуска</a></li>
               <li><a href="{% url 'alphabet-list' %}">По алфавиту</a></li>
               <li><a href="{% url 'qa' %}">Q&A</a></li>
+              <li><a href="{% url 'feed' %}">Feed</a></li>
             {% endblock %}
           </ul>
           <form class="navbar-form navbar-left" action="{% url 'student-list' %}">
