column votes in feed

--- a/templates/core/feed.jade
+++ b/templates/core/feed.jade
@@ -22,15 +22,32 @@ block content
               td {{ i.status_update_date|date:"d.m.Y H:i" }}
               td {{ i.target }}
               td {{ i.get_field_name_display }}
+
               td
                 - if i.field_name == 'email'
                     -
                 - else
                     {{ i.field_value }}
+
               td {{ i.get_status_display }}
 
-              //# TODO переделать в автора смены статуса?
               td {{ i.author_code.owner|default:"" }}
+
+              td
+                - for j in i.votes_up
+                  - if j is None
+                    | Аноним
+                  - else
+                    | {{ j }}
+                  br
+
+              td
+                - for j in i.votes_down
+                  - if j is None
+                    | Аноним
+                  - else
+                    | {{ j }}
+                  br
 
             - empty
               p Пусто.
