--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -45,8 +45,8 @@
             {% block nav %}
               <li><a href="/">Классы выпуска</a></li>
               <li><a href="{% url 'alphabet-list' %}">По алфавиту</a></li>
+              <li><a href="{% url 'feed' %}">Правки</a></li>
               <li><a href="{% url 'qa' %}">Q&A</a></li>
-              <li><a href="{% url 'feed' %}">Фиды</a></li>
             {% endblock %}
           </ul>
           <form class="navbar-form navbar-left" action="{% url 'student-list' %}">
