--- a/templates/core/include_vote.jade
+++ b/templates/core/include_vote.jade
@@ -14,3 +14,4 @@
         t.html '<span class="glyphicon glyphicon-ok"></span>'
     $('#tab-student').on 'click', '.btn-vote', click_vote
     $('#student-nav').on 'click', '.btn-vote', click_vote
+    $('#feed').on 'click', '.btn-vote', click_vote
