--- a/templates/core/student_detail.jade
+++ b/templates/core/student_detail.jade
@@ -68,17 +68,7 @@ block content
                       a E-mail скрыт
                   - else
                       {{ modification.field_value }}
-                  - if modification.field_name != 'email'
-                    span.vote-panel
-                      | &nbsp
-                      a.btn-vote(data-href="{% url 'field-vote' pk=modification.pk vote_type='upvoted' %}")
-                        span.glyphicon.glyphicon-ok-circle
-                      | &nbsp
-                      a.btn-vote(data-href="{% url 'field-vote' pk=modification.pk vote_type='downvoted' %}")
-                        span.glyphicon.glyphicon-remove-circle
-                      | &nbsp
-                      a.btn-vote(data-href="{% url 'field-vote' pk=modification.pk vote_type='to_delete' %}")
-                        span.glyphicon.glyphicon-ban-circle
+                  include include/vote_buttons
               li.show-hidden
                 a ...
         - else
