--- a/templates/core/student_detail.jade
+++ b/templates/core/student_detail.jade
@@ -31,7 +31,7 @@ block content
         - var content = 'Проголосовать против этого факта'
     if type == 'delete'
       if is_active
-        - var content = 'Отменить свой голосо за удаление этого факта'
+        - var content = 'Отменить свой голос за удаление этого факта'
       else
         - var content = 'Проголосовать за удаление этого факта'
     if is_active
