Add reloading of vote buttons on feed page

--- a/templates/core/feed.jade
+++ b/templates/core/feed.jade
@@ -86,7 +86,7 @@ block content
             th Проголосовать
         tbody
           - for i in object_list
-            tr
+            tr(data-id='{{i.id}}')
               td {{ i.status_update_date|date:"d.m.Y H:i" }}
 
               td
