--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -24,6 +24,22 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+        .navbar-brand {
+            position: relative;
+            top: -10px;
+            left: 2px;
+            font-size: 100%;
+        }
+        .navbar-brand b {
+            position: relative;
+            top: -6px;
+            left: -2px;
+            font-size: 150%;
+            font-weight: normal;
+            display: block;
+        }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-inverse navbar-static-top">
@@ -36,7 +52,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Выпускники 57 — директория</a>
+          <a class="navbar-brand" href="/">Выпускники 57:<b>директория</b></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
