--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -39,6 +39,10 @@
             font-weight: normal;
             display: block;
         }
+        .navbar-brand:hover {
+            transition: color 0.6s ease;
+            color: #b0d4dd !important;
+        }
     </style>
   </head>
   <body>
