--- a/templates/core/feed.jade
+++ b/templates/core/feed.jade
@@ -140,7 +140,7 @@ block content
                     - url 'field-vote' pk=modification.pk vote_type='downvoted' as href
                     +vote_btn(href, 'down', modification.downvoted)
 
-                  if modification.is_owned
+                  if modification.is_owned or request.session.student_id == i.target_id
                     - url 'field-vote' pk=modification.pk vote_type='to_delete' as href
                     +vote_btn(href, 'delete', modification.deleted)
 
