--- a/templates/core/student_list.jade
+++ b/templates/core/student_list.jade
@@ -121,8 +121,16 @@ block content
                         a(href="{% url 'student-list' %}?year={{ grade.graduation_year }}")
                             | {{ grade.graduation_year }}
                     li.active {{ grade.letter }}
+                      = ' [ '
+                      a.text-muted(href='{% url "feed" %}?grade={{ grade }}')
+                        | правки
+                      | ]
                 - elif year
                     li.active {{ year }}
+                    = ' [ '
+                    a.text-muted(href='{% url "feed" %}?year={{ year }}')
+                      | правки
+                    | ]
                 - elif char
                     li.active Буква {{ char.upper }}
 
@@ -142,12 +150,6 @@ block content
             - if group.is_grade
               a(href="{% url 'student-list' %}?grade_id={{ group.pk }}")
                 | {{ group }}
-              = ' '
-              span.small
-                = '[ '
-                a.text-muted(href='{% url "feed" %}?grade={{ group }}')
-                  | правки
-                | ]
             - else
               | {{ group }}
 
