Add new fields (year of death, degree, profession, linkedin) Closes #9

--- a/templates/core/student_detail.jade
+++ b/templates/core/student_detail.jade
@@ -98,6 +98,9 @@ block content
                   - elif modification.field_name == 'social_fb'
                       a(href="{{ modification.field_value }}")
                           | {{ modification.field_value }}
+                  - elif modification.field_name == 'social_li'
+                      a(href="{{ modification.field_value }}")
+                          | {{ modification.field_value }}
                   - elif modification.field_name == 'link'
                       a(href="{{ modification.field_value }}")
                           | {{ modification.field_value }}
