Change `li` to `linkedin` in student list

--- a/templates/include/student_item.jade
+++ b/templates/include/student_item.jade
@@ -50,4 +50,4 @@ a.student-window {{ student.name }}
       - elif name == 'social_li'
         a(href="{{ modif.field_value }}",
             data-toggle="tooltip", data-placement="top", title="LinkedIn")
-          span.value-badge(class="value-{{ modif.status }}") li
+          span.value-badge(class="value-{{ modif.status }}") linkedin
