--- a/templates/include/student_item.jade
+++ b/templates/include/student_item.jade
@@ -7,7 +7,7 @@ a.student-window {{ student.name }}
 
 - for n in student.ordered_facts.death_year
   - if n.status == 'trusted'
-    | †&nbsp;<b>{{ n.field_value }}</b>
+    | &nbsp;†&nbsp;<b>{{ n.field_value }}</b>
 
 - if show_grade
     a(href="{% url 'student-list'  %}?grade_id={{ student.main_grade.pk }}")
