Fix displaying long values in the feed

--- a/templates/core/feed.jade
+++ b/templates/core/feed.jade
@@ -100,7 +100,7 @@ block content
 
               td {{ i.get_field_name_display }}
 
-              td
+              td.feed-item-value
                 - if i.field_name == 'email'
                     -
                 - else
