--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -43,6 +43,10 @@
             transition: color 0.6s ease;
             color: #b0d4dd !important;
         }
+        .feed-item-value {
+            max-width: 300px;
+            overflow: scroll;
+        }
     </style>
   </head>
   <body>
