--- a/templates/core/fieldvalue_form.jade
+++ b/templates/core/fieldvalue_form.jade
@@ -1,5 +1,5 @@
 
-form#from-add-fact.row(action="{% url 'student-value-create' pk=object.pk %}", method="post")
+form#form-add-fact.row(action="{% url 'student-value-create' pk=object.pk %}", method="post")
   - csrf_token
   .col-sm-5.form-group
     select#field-name.form-control(name='field_name' style='display: inline-block; width: 95%')
