--- a/templates/core/sendmail_form.jade
+++ b/templates/core/sendmail_form.jade
@@ -2,12 +2,11 @@
 form#sendmail(action="{% url 'field-sendmail' pk=field_email.pk %}", method="post")
   - csrf_token
   .form-group
-    label Тема сообщения
+    label Тема сообщения:
     input.form-control(name='subject', type='text', placeholder='', required='required')
   .form-group
-    label Тело сообщения
+    label Сообщение:
     textarea.form-control(name='message', rows="3", required='required')
       | Привет!
-      | Шаблон
 
   button.btn.btn-default(type='submit') Отправить
